# prochariot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/prochariot/: __init__.py  cli.py  core.py
